--- a/website/noesoft/templates/noesoft/annonce_1.html
+++ b/website/noesoft/templates/noesoft/annonce_1.html
@@ -8,29 +8,29 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="../../static/css/annonce_1.css">
 </head>
 <body>
    <header>
-                <nav class="navbar">
-                    <div class="col-5 offset-1" style="padding: 0">
+                <nav class="navbar sticky-top">
+                    <div class="col-xl-5 offset-xl-1" style="padding: 0">
                         <a class="navbar-brand" href="#">
                             <img src="../../static/img/logo.png" alt="logo">
                         </a>
                     </div>
-                    <div class="col-5 text-right" style="padding: 0">
+                    <div class="col-xl-5 text-right" style="padding: 0">
                         <a class="job_link" href="#">
                             <p class="job_title">Alternance Développeur.se DJANGO</p>
                         </a>
                     </div>
-                    <div class="col-1" style="padding: 0"></div>
+                    <div class="col-xl-1" style="padding: 0"></div>
                 </nav>
     </header>
 
     <div class="container-fluid">
         <div class="row">
-            <section class="annonce col-6 offset-1">
-                <div class="text col-11">
+            <section class="annonce col-xl-6 offset-xl-1">
+                <div class="text col-xl-11">
                     <h1>Alternance Développeur.se DJANGO</h1>
                     <p>NOÉSOFT  est  une  jeune  société de  services en  pleine  croissance.  Nous  développons  des applications  web  et  mobiles
                         pour  le  compte  de  PME  dans  des  domaines  très  variés: ascensoristes,librairies, gestion immobilière...
@@ -57,10 +57,10 @@
                 </div>
 
             </section>
-            <section class="postuler col-4">
+            <section class="postuler col-xl-4">
                 <h1>Ta candidature</h1>
                 <div class="row">
-                    <div class="form_titles col-3 offset-1 text-right">
+                    <div class="form_titles col-xl-3 offset-xl-1 text-right">
                         <p>Prénom</p>
                         <p>Nom</p>
                         <p>Email</p>
@@ -68,13 +68,13 @@
                         <p>CV</p>
                         <p>Message</p>
                     </div>
-                    <div class="form_candidate col-6">
+                    <div class="form_candidate col-xl-6">
                         <form>
                             <input type="text" id="name" class="form_inputs" name="name" required>
                             <input type="text" id="lastname" class="form_inputs" name="lastname" required>
                             <input type="email" id="mail" class="form_inputs" name="mail" required>
                             <input type="tel" id="phone" class="form_inputs" name="phone" required>
-                            <input type="file" id="load_btn" name="file">
+                            <input type="file" id="load_btn" name="file" required>
                             <textarea id="message" class="form_inputs" name="message" rows="5" required></textarea>
                             <input id="submit_btn" type="submit" value="POSTULER">
                         </form>
