--- a/website/noesoft/templates/noesoft/annonce_1_confirmed.html
+++ b/website/noesoft/templates/noesoft/annonce_1_confirmed.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+
+</body>
+</html><!DOCTYPE html>
 {% load static %}
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Annonce 1</title>
+    <title>Merci pour votre candidature</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -58,32 +67,15 @@
 
             </section>
             <section class="postuler col-xl-4">
-                <h1>Ta candidature</h1>
+                <h1>CANDIDATURE TRANSMISE</h1>
                 <div class="row">
-                    <div class="form_titles col-xl-3 offset-xl-1 text-right">
-                        <p>Prénom</p>
-                        <p>Nom</p>
-                        <p>Email</p>
-                        <p>Téléphone</p>
-                        <p>CV</p>
-                        <p>Message</p>
-                    </div>
-                    <div class="form_candidate col-xl-6">
-                        <form action="{% url 'annonce_1' %}" method="post">
-                            {% csrf_token %}
-                            <input type="text" id="name" class="form_inputs" name="name" required>
-                            <input type="text" id="lastname" class="form_inputs" name="lastname" required>
-                            <input type="email" id="mail" class="form_inputs" name="mail" required>
-                            <input type="tel" id="phone" class="form_inputs" name="phone" required>
-                            <input type="file" accept="application/pdf" id="load_btn" name="file" required>
-                            <textarea id="message" class="form_inputs" name="message" rows="5" required></textarea>
-                            <input id="submit_btn" type="submit" value="POSTULER">
-                        </form>
+                    <div class="application_send_section col-xl-12 text-center">
+                        <p class="thank_you_name">Merci {fname}</p>
+                        <p>Nous reviendrons vers vous prochainement</p>
                     </div>
                 </div>
             </section>
         </div>
-
     </div>
 </body>
 </html>
