Récup nom candidat dans html ok

--- a/website/noesoft/templates/noesoft/annonce_1_confirmed.html
+++ b/website/noesoft/templates/noesoft/annonce_1_confirmed.html
@@ -70,7 +70,7 @@
                 <h1>CANDIDATURE TRANSMISE</h1>
                 <div class="row">
                     <div class="application_send_section col-xl-12 text-center">
-                        <p class="thank_you_name">Merci {fname}</p>
+                        <p class="thank_you_name">Merci {{candidate_name}}</p>
                         <p>Nous reviendrons vers vous prochainement</p>
                     </div>
                 </div>
