--- a/website/noesoft/templates/noesoft/annonce_1.html
+++ b/website/noesoft/templates/noesoft/annonce_1.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col-xl-5 text-right" style="padding: 0">
                 <a class="job_link" href="#">
-                    <p class="job_title">Alternance Développeur.se DJANGO</p>
+                    <p class="job_title">{{job}}</p>
                 </a>
             </div>
             <div class="col-xl-1" style="padding: 0"></div>
@@ -31,7 +31,7 @@
         <div class="row">
             <section class="annonce col-xl-6 offset-xl-1">
                 <div class="text col-xl-11">
-                    <h1>Alternance Développeur.se DJANGO</h1>
+                    <h1>{{job}}</h1>
                     <p>NOÉSOFT  est  une  jeune  société de  services en  pleine  croissance.  Nous  développons  des applications  web  et  mobiles
                         pour  le  compte  de  PME  dans  des  domaines  très  variés: ascensoristes,librairies, gestion immobilière...
                         Chaque  projet  est  l’occasion  d’apporter  un maximum de valeur aux utilisateurs!</p>
@@ -53,7 +53,7 @@
                     <p>Passionné par le développement, convaincu que Django est un choix technologique pertinent, autonome  et  à  l’écoute,  tu  cherches  une  alternance
                         qui  te  permettra  de  monter  en compétences sur de nombreux sujets tout en donnant beaucoup desens à ton travail.</p>
                     <p>Lieu: Paris 9 dans un espace de coworking avec une super ambiance, d’autres sociétés dans l’édition de logiciels, un babyfoot et des apéros réguliers;)</p>
-                    <p>Démarrage: à partir de juillet 2020pour 1 année d’alternance renouvelable </p>
+                    <p>Démarrage: à partir de juillet 2020 pour 1 année d’alternance renouvelable </p>
                 </div>
 
             </section>
