--- a/website/noesoft/static/css/annonce.css
+++ b/website/noesoft/static/css/annonce.css
@@ -49,7 +49,7 @@
     margin-bottom: 8%;
     text-transform: uppercase;
     color: #2a8a9e;
-    margin-top: 4%;
+    margin-top: 30px;
 }
 
 .form_titles p {
@@ -73,6 +73,7 @@
     background-color: #2a8a9e;
     border: none;
     font-weight: bold;
+    margin-bottom: 30px;
 }
 
 /*APPLICATION SEND*/
