--- a/website/noesoft/templates/noesoft/annonce_1.html
+++ b/website/noesoft/templates/noesoft/annonce_1.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <header>
-        <nav class="navbar sticky-top">
+        <nav class="navbar fixed-top navbar-expand">
             <div class="col-xl-5 offset-xl-1" style="padding: 0">
                 <a class="navbar-brand" href="{% url 'home' %}">
                     <img src="../../static/img/logo.png" alt="logo">
