--- a/website/noesoft/templates/noesoft/index.html
+++ b/website/noesoft/templates/noesoft/index.html
@@ -23,7 +23,7 @@
                         <a href="{% url 'annonce_1' %}">Alternance Développeur.se DJANGO</a>
                     </li>
                     <li>
-                        <a href="{% url 'annonce_2' %}">Seconde annonce</a>
+                        <a href="{% url 'annonce_2' %}">Developpeur JavaScript Fullstack</a>
                     </li>
                 </ul>
             </div>
