envoie du mail ok

--- a/website/noesoft/templates/noesoft/annonce_1_confirmed.html
+++ b/website/noesoft/templates/noesoft/annonce_1_confirmed.html
@@ -28,7 +28,7 @@
                 </a>
             </div>
             <div class="col-xl-5 text-right" style="padding: 0">
-                <a class="job_link" href="{% url 'home' %}">
+                <a class="job_link" href="{% url 'annonce_1' %}">
                     <p class="job_title">{{job}}</p>
                 </a>
             </div>
