--- a/website/noesoft/static/css/annonce.css
+++ b/website/noesoft/static/css/annonce.css
@@ -17,10 +17,12 @@
 
 .navbar-brand img{
     height: 55px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .container-fluid {
-    margin-top: 100px;
+    margin-top: 120px;
     margin-bottom: 50px;
 }
 
