--- a/website/noesoft/templates/noesoft/annonce_1.html
+++ b/website/noesoft/templates/noesoft/annonce_1.html
@@ -19,7 +19,7 @@
                 </a>
             </div>
             <div class="col-xl-5 text-right" style="padding: 0">
-                <a class="job_link" href="#">
+                <a class="job_link" href="{% url 'annonce_1' %}">
                     <p class="job_title">{{job}}</p>
                 </a>
             </div>
